--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 bg: "rails.jpg"
 layout: default
-crawlertitle: "Jekyll blog"
-title: "Voyager"
-summary: "main page"
+crawlertitle: "Rúben André Barreiro's Blog"
+title: "Rúben André Barreiro"
+summary: "Home"
 ---
 
 {% for post in site.posts limit: 5 %}
