--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 bg: "rails.jpg"
 layout: default
-crawlertitle: "Rúben André Barreiro's Blog"
+crawlertitle: "Rúben André Barreiro's Blog - Home"
 title: "Rúben André Barreiro"
 summary: "Home"
 ---
