--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ bg: "rails.jpg"
 layout: default
 crawlertitle: "Rúben André Barreiro's Blog - Home"
 title: "Rúben André Barreiro"
-summary: "Home"
+summary: "<b>Home</b>"
 ---
 
 {% for post in site.posts limit: 5 %}
