--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 bg: "rails.jpg"
 layout: default
 crawlertitle: "Rúben André Barreiro's Blog - Home"
-title: "Rúben André Barreiro"
-summary: "<b>Home</b>"
+title: "Home"
+summary: "<b>Home</b> <br> Welcome to my <i>GitHub's Page/Personal Blog</i>!"
 ---
 
 {% for post in site.posts limit: 5 %}
