--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ bg: "rails.jpg"
 layout: default
 crawlertitle: "Rúben André Barreiro's Blog - Home"
 title: "Home"
-summary: "<b>Home</b> <br> Welcome to my <i>GitHub's Page/Personal Blog</i>!"
+summary: "Welcome to my <i>GitHub's Page/Personal Blog</i>!"
 ---
 
 {% for post in site.posts limit: 5 %}
