--- a/projects/webgl/fractals_mandelbrot_julia/Fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/Fractals.html
@@ -1,6 +1,6 @@
 <!-- Computer Graphics and Interfaces 2016-2017 -->
 
-<!-- Lab Work 1 - Fractal - Sets of Mandelbrot and Julia -->
+<!-- Lab Work 1 - Fractals - Sets of Mandelbrot and Julia -->
 
 <!-- 45404 Daniel Pimenta d.pimenta@campus.fct.unl.pt -->
 <!-- 42648 Ruben Barreiro r.barreiro@campus.fct.unl.pt -->
@@ -62,7 +62,7 @@
         }
 </script>
     
-<script type="text/javascript" src="Fractal.js"></script>
+<script type="text/javascript" src="Fractals.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
