--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -78,7 +78,11 @@
         Oops... your browser doesn't support the HTML5 canvas element"
     </canvas>
    
-    <h2>Authors: <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648 and <u><i>Daniel Pimenta</i></u> - no. 45404</h2>
+    <h2>Authors: 
+        <br>
+        <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
+        <br><u><i>Daniel Pimenta</i></u> - no. 45404
+    </h2>
     <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
     <h4>Computer Graphics and Interfaces - Lab Work 1</h4>
     </div>
