--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -78,11 +78,13 @@
         Oops... your browser doesn't support the HTML5 canvas element"
     </canvas>
    
-    <h2>Authors: 
-        <br>
+    <h2>Authors:</h2>
+    <br>
+    <h3>
         <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
-        <br><u><i>Daniel Pimenta</i></u> - no. 45404
-    </h2>
+        <br>
+        <u><i>Daniel Pimenta</i></u> - no. 45404
+    </h3>
     <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
     <h4>Computer Graphics and Interfaces - Lab Work 1</h4>
     </div>
