--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -78,17 +78,17 @@
         Oops... your browser doesn't support the HTML5 canvas element"
     </canvas>
    
-    <h2>Authors:</h2>
-    <h3>
-        <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
-        <br>
-        <u><i>Daniel Pimenta</i></u> - no. 45404
-    </h3>
     <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
     <h4>Computer Graphics and Interfaces - Lab Work 1</h4>
     </div>
         
     <div id="instructionsFactorsAndSets" style="display: inline-block; vertical-align: top">    
+        <h2>Authors:
+            <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
+            <br>
+            <u><i>Daniel Pimenta</i></u> - no. 45404
+        </h2>
+        
         <b>Instructions:</b>
         <font size="2">
             <br>
