--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -99,9 +99,15 @@
                 - Choose also the current factor to the scale of the current <i>Fractal</i> in use;
             <br>
         </font>
-
-        Factor: <input id="factor" type="range" min="0.00" max="2.00" step="0.01" value="1.0">
-        Fractal type: 
+        
+        <br>
+        <br>
+        
+        <b>Settings/Adjustments:</b>
+        <br>
+        <b>Factor:</b> <input id="factor" type="range" min="0.00" max="2.00" step="0.01" value="1.0">
+        <br>
+        <b>Fractal type:</b> 
         <select id="fractal">
             <option>Mandelbrot</option>
             <option>Julia c=-0.4+0.6i</option>
