--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -85,9 +85,9 @@
     <div id="instructionsFactorsAndSets" style="display: inline-block; vertical-align: top">    
         <h2>Authors:
             <br>
-            <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
+            &nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
             <br>
-            <u><i>Daniel Pimenta</i></u> - no. 45404
+            &nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
         </h2>
         
         <b>Instructions:</b>
