--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -95,9 +95,9 @@
             <br>
                 - Use 'Q' and 'A' keys dive/emerge. Use click/drag/release in the canvas to move center point;
             <br>
-                - Choose the current <i>Fractal's Set</i> in use (<i>Benoit Mandelbrot</i> or <i>Gaston Julia</i>);
+                - Choose the current <b><i>Fractal's Set</i></b> in use (<i>Benoit Mandelbrot</i> or <i>Gaston Julia</i>);
             <br>
-                - Choose also the current factor to the scale of the current <i>Fractal</i> in use;
+                - Choose also the current factor to the scale of the current <b><i>Fractal</i></b> in use;
             <br>
         </font>
         
