--- a/projects/webgl/3d_object_modulation_helicopter/modelling_demo.html
+++ b/projects/webgl/3d_object_modulation_helicopter/modelling_demo.html
@@ -110,9 +110,9 @@ void main() {
     </div>
     <div id="instructions" style="display: inline-block; vertical-align: top">
         <h2>Instructions:</h2>
-        <p>&nbsp;&nbsp;- <b>Up arrow (↑)</b> key to move up the helicopter</p>
-        <p>&nbsp;&nbsp;- <b>Down arrow (↓)</b> key to move down the helicopter</p>
-        <p>&nbsp;&nbsp;- <b>Left arrow (←)</b> key to make a circular move for the helicopter</p>
+        <p>&nbsp;&nbsp;- <b>Up arrow (↑)</b> key to move up the helicopter;</p>
+        <p>&nbsp;&nbsp;- <b>Down arrow (↓)</b> key to move down the helicopter;</p>
+        <p>&nbsp;&nbsp;- <b>Left arrow (←)</b> key to make a circular move for the helicopter;</p>
         
         <div id="axonometricProjection">
             <h2>Axonometric Projection:</h2>
