--- a/projects/webgl/3d_object_modelation_helicopter/modelling_demo.html
+++ b/projects/webgl/3d_object_modelation_helicopter/modelling_demo.html
@@ -113,6 +113,7 @@ void main() {
         <p>&nbsp;&nbsp;- <b>Up arrow (↑)</b> key to move up the helicopter;</p>
         <p>&nbsp;&nbsp;- <b>Down arrow (↓)</b> key to move down the helicopter;</p>
         <p>&nbsp;&nbsp;- <b>Left arrow (←)</b> key to make a circular move for the helicopter;</p>
+        <p>&nbsp;&nbsp;- Choose the pretended <b>Angles Factors (&theta; and &gamma; Angles)</b> for adjust the settings for the <i>Axonometric Projection</i>;</p>
         
         <div id="axonometricProjection">
             <h2>Axonometric Projection:</h2>
