--- a/projects/webgl/3d_object_modelling_helicopter/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_helicopter/modelling_demo.html
@@ -98,7 +98,7 @@ void main() {
 
 </head>
 <body>
-  <title>Modelling Demo</title>
+  <title>3D Modelling Demo - Flying Helicopter</title>
     <div id="container" style="display: inline-block">
         <canvas id="gl-canvas" width="500" height="500">
              Oops... your browser doesn't support the HTML5 canvas element"
