--- a/projects/webgl/3d_object_modelling_robot/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_robot/modelling_demo.html
@@ -145,9 +145,9 @@ void main() {
             <div id="projection" style="display: inline-block">
                 &nbsp&nbsp <b>Axonometric Projection:</b> &nbsp&nbsp
                 </br>
-                &nbsp&nbsp Gamma angle &nbsp&nbsp<input id="gamma" type="range" min="0" max="90" step="1" value="19.4205368891236">
+                &nbsp&nbsp Gamma Angle &nbsp&nbsp<input id="gamma" type="range" min="0" max="90" step="1" value="19.4205368891236">
                 </br>
-                &nbsp&nbsp Theta angle &nbsp&nbsp<input id="theta" type="range" min="0" max="360" step="1" value="339.731932804673">
+                &nbsp&nbsp Theta Angle &nbsp&nbsp<input id="theta" type="range" min="0" max="360" step="1" value="339.731932804673">
             </div>
             <div id="rendermode" style="display: inline-block">
             &nbsp&nbsp <b>Render Mode:</b>
