--- a/projects/webgl/3d_object_modelling_robot/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_robot/modelling_demo.html
@@ -138,9 +138,11 @@ void main() {
             </p>
             <p>&nbsp&nbsp- <b><i>Down Arrow (↓)</i></b> key to move <b>Robot</b> backward;
             </p>
+            <p>&nbsp&nbsp- Choose the pretended <b>Angles Factors</b> (<b><i>Theta</i></b> and <b><i>Gamma</i> Angles</b>) for adjust the settings for the <i>Axonometric Projection</i>;
+            </p>
             </h5>
             
-            <br>
+            <br>        
             
             <div id="projection" style="display: inline-block">
                 &nbsp&nbsp <b>Axonometric Projection:</b> &nbsp&nbsp
