--- a/projects/webgl/3d_object_modelling_robot/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_robot/modelling_demo.html
@@ -111,12 +111,12 @@ void main() {
             &nbsp&nbsp&nbsp&nbsp
         </div>
         <div id="authorsInstructions" style="display: inline-block; vertical-align: top">
-            <h2>Authors:</h2>
+            <!--<h2>Authors:</h2>
             <h5>
                 &nbsp;-&nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
                 <br>
                 &nbsp;-&nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
-            </h5>
+            </h5>-->
             
             <h2>Instructions:</h2>
             <h5>
@@ -164,6 +164,12 @@ void main() {
     </div>
 
     <div id="info" style="display: inline-block">
+        <h2>Authors:</h2>
+        <h5>
+            &nbsp;-&nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
+            <br>
+            &nbsp;-&nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
+        </h5>
         <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
         <h4>Computer Graphics and Interfaces - Lab Work 3</h4>
     </div>
