--- a/projects/webgl/3d_object_modelling_robot/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_robot/modelling_demo.html
@@ -111,14 +111,14 @@ void main() {
             &nbsp&nbsp&nbsp&nbsp
         </div>
         <div id="authorsInstructions" style="display: inline-block; vertical-align: top">
-            <!--<h2>Authors:</h2>
+            <h3>Authors:</h3>
             <h5>
                 &nbsp;-&nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
                 <br>
                 &nbsp;-&nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
-            </h5>-->
+            </h5>
             
-            <h2>Instructions:</h2>
+            <h3>Instructions:</h3>
             <h5>
             <p>&nbsp&nbsp- <b><i>'Q'</i></b> and <b><i>'W'</i></b> keys to rotate the <b>Robot's</b> arm;
             </p>
