--- a/projects/webgl/3d_object_modelling_robot/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_robot/modelling_demo.html
@@ -122,21 +122,15 @@ void main() {
             <h5>
             <p>&nbsp&nbsp- <b><i>'Q'</i></b> and <b><i>'W'</i></b> keys to rotate the <b>Robot's</b> arm;
             </p>
-            <p>&nbsp&nbsp- <b><i>'A'</i></b> and <b><i>'S'</i></b> keys to rotate the <b>Robot's</b> upper joint;
-            </p>
-            <p>&nbsp&nbsp- <b><i>'Z'</i></b> and <b><i>'X'</i></b> keys to rotate the <b>Robot's</b> lower joint;
+            <p>&nbsp&nbsp- <b><i>'A'</i></b> and <b><i>'S'</i></b> keys to rotate the <b>Robot's</b> upper joint. And <b><i>'Z'</i></b> and <b><i>'X'</i></b> keys to rotate the <b>Robot's</b> lower joint;
             </p>
             <p>&nbsp&nbsp- <b><i>'O'</i></b> and <b><i>'P'</i></b> keys to move the <b>Robot's</b> claws;
             </p>
             <p>&nbsp&nbsp- <b><i>'K'</i></b> and <b><i>'L'</i></b> keys to rotate the <b>Robot's</b> hand;
             </p>
-            <p>&nbsp&nbsp- <b><i>Left Arrow (←)</i></b> key to move the <b>Robot</b> to the left;
+            <p>&nbsp&nbsp- <b><i>Left Arrow (←)</i></b> key to move the <b>Robot</b> to the left. And <b><i>Right Arrow (→)</i></b> key to move the <b>Robot</b> to the right;
             </p>
-            <p>&nbsp&nbsp- <b><i>Right Arrow (→)</i></b> key to move the <b>Robot</b> to the right;
-            </p>
-            <p>&nbsp&nbsp- <b><i>Up Arrow (↑)</i></b> key to move the <b>Robot</b> forward;
-            </p>
-            <p>&nbsp&nbsp- <b><i>Down Arrow (↓)</i></b> key to move <b>Robot</b> backward;
+            <p>&nbsp&nbsp- <b><i>Up Arrow (↑)</i></b> key to move the <b>Robot</b> forward. And <b><i>Down Arrow (↓)</i></b> key to move <b>Robot</b> backward;
             </p>
             <p>&nbsp&nbsp- Choose the pretended <b>Angles Factors</b> (<b><i>Theta</i></b> and <b><i>Gamma</i> Angles</b>) for adjust the settings for the <i>Axonometric Projection</i>;
             </p>
