--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -93,11 +93,11 @@
         <b>Instructions:</b>
         <font size="2">
             <br>
-                - Use 'Q' and 'A' keys dive/emerge. Use click/drag/release in the canvas to move center point;
+                - Use <b><i>'Q'</i></b> and <b><i>'A'</i></b> keys dive/emerge. Use <b><i>click/drag/release</i></b> in the canvas to move center point;
             <br>
                 - Choose the current <b><i>Fractal's Set</i></b> in use (<i>Benoit Mandelbrot</i> or <i>Gaston Julia</i>);
             <br>
-                - Choose also the current factor to the scale of the current <b><i>Fractal</i></b> in use;
+                - Choose also the current <i>Factor</i> to the <i>Scale</i> of the current <b><i>Fractal</i></b> in use;
             <br>
         </font>
         
