--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -108,21 +108,80 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">1 / 98</div>
   <img src="imgs/Slide1.JPG" style="width:100%">
-  <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 98</div>
   <img src="imgs/Slide2.JPG" style="width:100%">
-  <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 98</div>
   <img src="imgs/Slide3.JPG" style="width:100%">
-  <div class="text">Caption Three</div>
 </div>
 
+<div class="mySlides fade">
+  <div class="numbertext">4 / 98</div>
+  <img src="imgs/Slide4.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">5 / 98</div>
+  <img src="imgs/Slide5.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">6 / 98</div>
+  <img src="imgs/Slide6.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">7 / 98</div>
+  <img src="imgs/Slide7.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">8 / 98</div>
+  <img src="imgs/Slide8.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">9 / 98</div>
+  <img src="imgs/Slide9.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">10 / 98</div>
+  <img src="imgs/Slide10.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">11 / 98</div>
+  <img src="imgs/Slide11.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">12 / 98</div>
+  <img src="imgs/Slide12.JPG" style="width:100%">
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">13 / 98</div>
+  <img src="imgs/Slide13.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">14 / 98</div>
+  <img src="imgs/Slide14.JPG" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">15 / 98</div>
+  <img src="imgs/Slide15.JPG" style="width:100%">
+</div>
+    
+    
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
