--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -52,7 +52,7 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/98 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -188,11 +188,12 @@ img {vertical-align: middle;}
 </div>
 <br>
 
+    <!--
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
-</div>
+</div>-->
 
 <script>
 var slideIndex = 1;
