--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -13,8 +13,11 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin: auto;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
 }
-
+    
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
