--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -5,7 +5,10 @@
 <style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
+.mySlides {display: none; 
+  height: 90px;
+  line-height: 90px;
+  text-align: center;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
@@ -13,9 +16,6 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin: auto;
-  height: 90px;
-  line-height: 90px;
-  text-align: center;
 }
     
 /* Next & previous buttons */
