--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -5,10 +5,7 @@
 <style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none; 
-  height: 90px;
-  line-height: 90px;
-  text-align: center;}
+.mySlides {display: none}
 img {vertical-align: middle;}
 
 /* Slideshow container */
