--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -104,7 +104,7 @@ img {vertical-align: middle;}
 </head>
 <body>
 
-<div class="slideshow-container">
+<div class="slideshow-container" style="vertical-align: middle">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 98</div>
