--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -102,7 +102,8 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
-<body>
+    
+<body style="vertical-align: middle">
 
 <div class="slideshow-container" style="vertical-align: middle">
 
