--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -103,7 +103,7 @@ img {vertical-align: middle;}
 </style>
 </head>
     
-<body style="vertical-align: middle">
+<body style="vertical-align: middle; color: beige;">
 
 <div class="slideshow-container" style="vertical-align: middle">
 
