--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -105,7 +105,7 @@ img {vertical-align: middle;}
     
 <body style="vertical-align: middle; background-color: darkslategrey; align-content: stretch">
 
-<div class="slideshow-container" style="vertical-align: middle">
+<div class="slideshow-container" style="align-items: center;align-self: center; vertical-align: middle">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 98</div>
