--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -103,7 +103,7 @@ img {vertical-align: middle;}
 </style>
 </head>
     
-<body style="vertical-align: middle; background-color: darkslategrey; align-content: stretch">
+<body style="vertical-align: middle; background-color: darkslategrey; align-self: stretch; align-content: stretch">
 
 <div class="slideshow-container" style="align-items: center;align-self: stretch; vertical-align: middle">
 
