--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -610,8 +610,11 @@ img {vertical-align: middle;}
 <br>
 
 <hr>
-<center> *** © Rúben André Barreiro - GitHub's Page/Personal Blog - All rights reserved *** </center>
-<br>
+<center>
+    <p style="color: white">
+        *** © Rúben André Barreiro - GitHub's Page/Personal Blog - All rights reserved ***
+    </p>
+</center>
 <hr>
 
 <!--
