--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -610,7 +610,7 @@ img {vertical-align: middle;}
 
 <hr>
 <center>
-    <p style="color: white; font-size: 1">
+    <p style="color: white; font-size: 1px">
         *** © Rúben André Barreiro - GitHub's Page/Personal Blog - All rights reserved ***
     </p>
 </center>
