--- a/projects/webgl/3d_object_modelling_helicopter/modelling_demo.html
+++ b/projects/webgl/3d_object_modelling_helicopter/modelling_demo.html
@@ -2,6 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <head>
+
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Protrait_2D_1.png"/>
+
 <script id="vertex-shader-2" type="x-shader/x-vertex">
 const vec4 lightPosition = vec4(0.0, 0.0, 10.0, 1.0);    // in WC
 
