--- a/projects/webgl/fractals_mandelbrot_julia/fractals.html
+++ b/projects/webgl/fractals_mandelbrot_julia/fractals.html
@@ -9,6 +9,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1"/>
     
 <script id="vertex-shader" type="x-shader/x-vertex">
         uniform float scale;
