--- a/projects/webgl/rotative_shapes/rotative_shapes.html
+++ b/projects/webgl/rotative_shapes/rotative_shapes.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1"/>
+    
 <style>
 .color {
     display: inline-block;
