--- a/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
+++ b/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1"/>
+        
         <link rel="stylesheet" type="text/css" href="object_viewer.css">
         
         <script id="vertex-shader-1" type="x-shader/x-vertex">
