--- a/projects/webgl/rotative_shapes/rotative_shapes.html
+++ b/projects/webgl/rotative_shapes/rotative_shapes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1"/>
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1.png"/>
     
 <style>
 .color {
