--- a/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
+++ b/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1"/>
+        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1.png"/>
         
         <link rel="stylesheet" type="text/css" href="object_viewer.css">
         
