--- a/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
+++ b/projects/webgl/3d_object_viewer_geometric_solids/object_viewer.html
@@ -51,6 +51,7 @@
       
     </head>
     <body>
+       <title>3D Modelling Demo - 3D Geometric Solids' Object Viewer</title>
        <div id="singlepagecontainer">
             <div id="interfacearea">
                 <h6>&nbsp;&nbsp; Authors:
