--- a/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/projects/research/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Hyrax_Logo_1.png"/>
+    
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
