--- a/_posts/2018-04-24-alexandre-campinas-photoshoots-#1-montage/montage.html
+++ b/_posts/2018-04-24-alexandre-campinas-photoshoots-#1-montage/montage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Automatic Image Montage with jQuery</title>
+        <title>Spring Photosession 2018 by Alexandre Campinas Photography</title>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Automatic Image Montage with jQuery" />
+        <meta name="description" content="Spring Photosession 2018 by Alexandre Campinas Photography" />
         <meta name="keywords" content="jquery, images, montage, fullscreen, floating, grid, automatic" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico"> 
@@ -26,50 +26,50 @@
 			</div>
             
 			<div class="am-container" id="am-container">
-				<a href="#"><img src="imgs/1.jpg"></img></a>
-				<a href="#"><img src="imgs/2.jpg"></img></a>
-				<a href="#"><img src="imgs/3.jpg"></img></a>
-				<a href="#"><img src="imgs/4.jpg"></img></a>
-				<a href="#"><img src="imgs/5.jpg"></img></a>
-				<a href="#"><img src="imgs/6.jpg"></img></a>
-                <a href="#"><img src="imgs/7.jpg"></img></a>
-				<a href="#"><img src="imgs/8.jpg"></img></a>
-				<a href="#"><img src="imgs/9.jpg"></img></a>
-				<a href="#"><img src="imgs/10.jpg"></img></a>
-				<a href="#"><img src="imgs/11.jpg"></img></a>
-				<a href="#"><img src="imgs/12.jpg"></img></a>	
-				<a href="#"><img src="imgs/13.jpg"></img></a>
-				<a href="#"><img src="imgs/14.jpg"></img></a>
-				<a href="#"><img src="imgs/15.jpg"></img></a>
-				<a href="#"><img src="imgs/16.jpg"></img></a>
-				<a href="#"><img src="imgs/17.jpg"></img></a>
-				<a href="#"><img src="imgs/18.jpg"></img></a>
-                <a href="#"><img src="imgs/19.jpg"></img></a>
-				<a href="#"><img src="imgs/20.jpg"></img></a>
-				<a href="#"><img src="imgs/21.jpg"></img></a>
-				<a href="#"><img src="imgs/22.jpg"></img></a>
-				<a href="#"><img src="imgs/23.jpg"></img></a>
-				<a href="#"><img src="imgs/24.jpg"></img></a>
-                <a href="#"><img src="imgs/25.jpg"></img></a>
-				<a href="#"><img src="imgs/26.jpg"></img></a>
-				<a href="#"><img src="imgs/27.jpg"></img></a>	
-				<a href="#"><img src="imgs/28.jpg"></img></a>
-				<a href="#"><img src="imgs/29.jpg"></img></a>
-				<a href="#"><img src="imgs/30.jpg"></img></a>
-				<a href="#"><img src="imgs/31.jpg"></img></a>
-				<a href="#"><img src="imgs/32.jpg"></img></a>
-				<a href="#"><img src="imgs/33.jpg"></img></a>
-                <a href="#"><img src="imgs/34.jpg"></img></a>
-				<a href="#"><img src="imgs/35.jpg"></img></a>
-				<a href="#"><img src="imgs/36.jpg"></img></a>
-				<a href="#"><img src="imgs/37.jpg"></img></a>
-				<a href="#"><img src="imgs/38.jpg"></img></a>
-				<a href="#"><img src="imgs/39.jpg"></img></a>		
-				<a href="#"><img src="imgs/40.jpg"></img></a>
-				<a href="#"><img src="imgs/41.jpg"></img></a>
-				<a href="#"><img src="imgs/42.jpg"></img></a>	
-				<a href="#"><img src="imgs/43.jpg"></img></a>
-				<a href="#"><img src="imgs/black.jpg"></img></a>
+				<a href="imgs/1.jpg"><img src="imgs/1.jpg"></img></a>
+				<a href="imgs/2.jpg"><img src="imgs/2.jpg"></img></a>
+				<a href="imgs/3.jpg"><img src="imgs/3.jpg"></img></a>
+				<a href="imgs/4.jpg"><img src="imgs/4.jpg"></img></a>
+				<a href="imgs/5.jpg"><img src="imgs/5.jpg"></img></a>
+				<a href="imgs/6.jpg"><img src="imgs/6.jpg"></img></a>
+                <a href="imgs/7.jpg"><img src="imgs/7.jpg"></img></a>
+				<a href="imgs/8.jpg"><img src="imgs/8.jpg"></img></a>
+				<a href="imgs/9.jpg"><img src="imgs/9.jpg"></img></a>
+				<a href="imgs/10.jpg"><img src="imgs/10.jpg"></img></a>
+				<a href="imgs/11.jpg"><img src="imgs/11.jpg"></img></a>
+				<a href="imgs/12.jpg"><img src="imgs/12.jpg"></img></a>	
+				<a href="imgs/13.jpg"><img src="imgs/13.jpg"></img></a>
+				<a href="imgs/14.jpg"><img src="imgs/14.jpg"></img></a>
+				<a href="imgs/15.jpg"><img src="imgs/15.jpg"></img></a>
+				<a href="imgs/16.jpg"><img src="imgs/16.jpg"></img></a>
+				<a href="imgs/17.jpg"><img src="imgs/17.jpg"></img></a>
+				<a href="imgs/18.jpg"><img src="imgs/18.jpg"></img></a>
+                <a href="imgs/19.jpg"><img src="imgs/19.jpg"></img></a>
+				<a href="imgs/20.jpg"><img src="imgs/20.jpg"></img></a>
+				<a href="imgs/21.jpg"><img src="imgs/21.jpg"></img></a>
+				<a href="imgs/22.jpg"><img src="imgs/22.jpg"></img></a>
+				<a href="imgs/23.jpg"><img src="imgs/23.jpg"></img></a>
+				<a href="imgs/24.jpg"><img src="imgs/24.jpg"></img></a>
+                <a href="imgs/25.jpg"><img src="imgs/25.jpg"></img></a>
+				<a href="imgs/26.jpg"><img src="imgs/26.jpg"></img></a>
+				<a href="imgs/27.jpg"><img src="imgs/27.jpg"></img></a>	
+				<a href="imgs/28.jpg"><img src="imgs/28.jpg"></img></a>
+				<a href="imgs/29.jpg"><img src="imgs/29.jpg"></img></a>
+				<a href="imgs/30.jpg"><img src="imgs/30.jpg"></img></a>
+				<a href="imgs/31.jpg"><img src="imgs/31.jpg"></img></a>
+				<a href="imgs/32.jpg"><img src="imgs/32.jpg"></img></a>
+				<a href="imgs/33.jpg"><img src="imgs/33.jpg"></img></a>
+                <a href="imgs/34.jpg"><img src="imgs/34.jpg"></img></a>
+				<a href="imgs/35.jpg"><img src="imgs/35.jpg"></img></a>
+				<a href="imgs/36.jpg"><img src="imgs/36.jpg"></img></a>
+				<a href="imgs/37.jpg"><img src="imgs/37.jpg"></img></a>
+				<a href="imgs/38.jpg"><img src="imgs/38.jpg"></img></a>
+				<a href="imgs/39.jpg"><img src="imgs/39.jpg"></img></a>		
+				<a href="imgs/40.jpg"><img src="imgs/40.jpg"></img></a>
+				<a href="imgs/41.jpg"><img src="imgs/41.jpg"></img></a>
+				<a href="imgs/42.jpg"><img src="imgs/42.jpg"></img></a>	
+				<a href="imgs/43.jpg"><img src="imgs/43.jpg"></img></a>
+				<a href="imgs/black.jpg"><img src="imgs/black.jpg"></img></a>
             </div>
 		</div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
