--- a/_posts/2018-04-24-alexandre-campinas-photoshoots-#1-montage/montage.html
+++ b/_posts/2018-04-24-alexandre-campinas-photoshoots-#1-montage/montage.html
@@ -19,7 +19,14 @@
 			<div id="overlay" class="content">
 				<div class="inner">
 					<h1>Spring Photosession 2018 <span>by Alexandre Campinas Photography</span></h1>
-					<h2>Fullscreen liquid example with alternating heights, last image will fill the last row. Refresh the browser to see a different arrangement.</h2>
+					<h2>
+                        <p align="justify"><u><b>CONTACTS:</b></u></p>
+                        <p align="justify"><b>Website:</b> <a target="_blank" href="http://www.alexandrecampinas.pt/">http://www.alexandrecampinas.pt/</a></p>
+                        <p align="justify"><b>Facebook:</b> <a target="_blank" href="https://www.facebook.com/alexandre.campinas.photography/">https://www.facebook.com/alexandre.campinas.photography/</a></p>
+                        <p align="justify"><b>Instagram:</b> <a target="_blank"
+href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.com/alexandrecampinasphoto/</a></p>
+                        <p align="justify"><b>E-mail:</b> <a target="_blank" href="mailto:ruben.barreiro.92@gmail.com">photo@alexandrecampinas.pt</a></p>
+                    </h2>
 					<div class="clr"></div>
 					<div id="panel" class="panel hide"></div>
 				</div>
