--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -9,8 +9,8 @@
         <meta name="keywords" content="jquery, images, montage, fullscreen, floating, grid, automatic" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
         
