--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -82,7 +82,7 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
             </div>
 		</div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-		<script type="text/javascript" src="js/jquery.montage.min.js"></script>
+		<script type="text/javascript" src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
 		<script type="text/javascript">
 			$(function() {
 				/* 
