--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -11,8 +11,8 @@
 		<link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
-		<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
         
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Bad_Newz_Logo_1.jpg"/>
     </head>
@@ -81,7 +81,7 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				<a href="imgs/black.jpg"><img src="imgs/black.jpg"></img></a>
             </div>
 		</div>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
 		<script type="text/javascript">
 			$(function() {
