--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -9,8 +9,8 @@
         <meta name="keywords" content="jquery, images, montage, fullscreen, floating, grid, automatic" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
         
@@ -82,7 +82,7 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
             </div>
 		</div>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-		<script type="text/javascript" src="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
+		<script type="text/javascript" src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
 		<script type="text/javascript">
 			$(function() {
 				/* 
