--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -8,7 +8,6 @@
         <meta name="description" content="Spring Photosession 2018 by Alexandre Campinas Photography" />
         <meta name="keywords" content="jquery, images, montage, fullscreen, floating, grid, automatic" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
@@ -20,7 +19,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Bad_Newz_Logo_1.jpg"/>
     </head>
     
-    <body class="demo">
+    <body class="container">
         <div id="demo-content">
 
             <div id="loader-wrapper">
