--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -19,8 +19,8 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Bad_Newz_Logo_1.jpg"/>
     </head>
     
-    <body class="demo">
-        <div id="demo-content" class="container">
+    <body>
+        <div class="container">
 
             <div id="loader-wrapper">
                 <div id="loader"></div>
