--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -13,7 +13,7 @@
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
         
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/main.css">
         <script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/vendor/modernizr-2.6.2.min.js"></script>
         
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/Bad_Newz_Logo_1.jpg"/>
@@ -91,10 +91,13 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				<a href="imgs/42.jpg"><img src="imgs/42.jpg"></img></a>	
 				<a href="imgs/43.jpg"><img src="imgs/43.jpg"></img></a>
 				<a href="imgs/black.jpg"><img src="imgs/black.jpg"></img></a>
+
             </div>
 		</div>
+
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script type="text/javascript" src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
+
 		<script type="text/javascript">
 			$(function() {
 				/* 
