--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -22,13 +22,13 @@
     <body>
         <div class="container">
 
-            <div id="loader-wrapper">
+            <!--<div id="loader-wrapper">
                 <div id="loader"></div>
 
                 <div class="loader-section section-left"></div>
                 <div class="loader-section section-right"></div>
 
-            </div>
+            </div>-->
             
 			<div id="overlay" class="content">
 				<div class="inner">
