--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -10,8 +10,8 @@
 		<meta name="author" content="Codrops" />
 
 		<link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
 
         <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css' />
@@ -99,13 +99,10 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 		</div>
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-<<<<<<< HEAD
+
 		<script type="text/javascript" src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
 
-=======
-		<script type="text/javascript" src="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/jquery.montage.min.js"></script>
->>>>>>> parent of 6d990cc... Minor Changes
-		<script type="text/javascript">
+        <script type="text/javascript">
 			$(function() {
 				/* 
 				 * just for this demo:
@@ -159,9 +156,5 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				
 			});
 		</script>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-	    <script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/main.js"></script>
     </body>
 </html>
