--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -25,13 +25,12 @@
     <body>
         <div class="container">
 
-            <!--<div id="loader-wrapper">
+            <div id="loader-wrapper">
                 <div id="loader"></div>
 
                 <div class="loader-section section-left"></div>
                 <div class="loader-section section-right"></div>
-
-            </div>-->
+            </div>
             
 			<div id="overlay" class="content">
 				<div class="inner">
@@ -156,5 +155,10 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				
 			});
 		</script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+        <script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/main.js"></script>
+
     </body>
 </html>
