--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -32,7 +32,7 @@
                 <div class="loader-section section-right"></div>
                 
                 <div class="loader-section section-loading">
-                     <center><h1>Loading...</h1></center>
+                     <h1>Loading...</h1>
                 </div>
             </div>
             
