--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -9,8 +9,7 @@
         <meta name="keywords" content="jquery, images, montage, fullscreen, floating, grid, automatic" />
 		<meta name="author" content="Codrops" />
 
-		<link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/css/style.css" />
 
         <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
@@ -159,5 +158,9 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				
 			});
 		</script>
+
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+	<script>window.jQuery || document.write('<script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+	<script src="../../photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/js/main.js"></script>
     </body>
 </html>
