Some repository updates
Some repository updates

--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -44,7 +44,7 @@
                         <p align="justify">&nbsp;&nbsp;<b>Facebook:</b> <a target="_blank" href="https://www.facebook.com/alexandre.campinas.photography/">https://www.facebook.com/alexandre.campinas.photography/</a></p>
                         <p align="justify">&nbsp;&nbsp;<b>Instagram:</b> <a target="_blank"
 href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.com/alexandrecampinasphoto/</a></p>
-                        <p align="justify">&nbsp;&nbsp;<b>E-mail:</b> <a target="_blank" href="mailto:ruben.barreiro.92@gmail.com">photo@alexandrecampinas.pt</a></p>
+                        <p align="justify">&nbsp;&nbsp;<b>E-mail:</b> <a target="_blank" href="mailto:photo@alexandrecampinas.pt">photo@alexandrecampinas.pt</a></p>
                     </h2>
 					<div class="clr"></div>
 					<div id="panel" class="panel hide"></div>
