--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="../../photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/style.css" />
 
         <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
-		<link href='https://fonts.googleapis.com/css?family=Alex+Brush&v1' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Lobster&v1' rel='stylesheet' type='text/css' />
         
         <link rel="stylesheet" href="../../photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/main.css">
         <script src="../../photoshoots/2018-09-17-david-oliveira-photoshoots-1/js/vendor/modernizr-2.6.2.min.js"></script>
