Some minor changes
Some minor changes

--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
@@ -39,6 +39,8 @@
 				<div class="inner">
 					<h1>Summer Photosession 2018 <span>by David Oliveira Photos</span></h1>
 					<h2>
+                        <p align="justify"><u><b>LOCATION OF PHOTOSESSION:</b></u></p>
+                        <p align="justify">&nbsp;&nbsp;<b>Porto and Vila Nova de Gaia, Portugal (Outdoor)</b>
                         <p align="justify"><u><b>CONTACTS:</b></u></p>
                         <p align="justify">&nbsp;&nbsp;<b>Website:</b> <a target="_blank" href="http://www.davidmpoliveira.pt/">http://www.davidmpoliveira.pt/</a></p>
                         <p align="justify">&nbsp;&nbsp;<b>Facebook:</b> <a target="_blank" href="https://www.facebook.com/davidoliveiraphotos/">https://www.facebook.com/davidoliveiraphotos/</a></p>
