--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-1/highlights.html
@@ -39,6 +39,8 @@
 				<div class="inner">
 					<h1>Spring Photosession 2018 <span>by Alexandre Campinas Photography</span></h1>
 					<h2>
+                        <p align="justify"><u><b>LOCATION OF PHOTOSESSION:</b></u></p>
+                        <p align="justify">&nbsp;&nbsp;<b>Almada, Portugal (Indoor/Studio)</b>
                         <p align="justify"><u><b>CONTACTS:</b></u></p>
                         <p align="justify">&nbsp;&nbsp;<b>Website:</b> <a target="_blank" href="http://www.alexandrecampinas.pt/">http://www.alexandrecampinas.pt/</a></p>
                         <p align="justify">&nbsp;&nbsp;<b>Facebook:</b> <a target="_blank" href="https://www.facebook.com/alexandre.campinas.photography/">https://www.facebook.com/alexandre.campinas.photography/</a></p>
